--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ dj-database-url==2.2.0
 Django==5.0.7
 django-cloudinary-storage==0.3.0
 django-environ==0.11.2
+gunicorn==22.0.0
 idna==3.7
+packaging==24.1
 psycopg2-binary==2.9.9
 requests==2.32.3
 six==1.16.0
